# terra-flight

./: README.md  citations.txt
roobot_control/: package.xml  setup.cfg  setup.py
roobot_interfaces/: CMakeLists.txt  package.xml
terraflight_control/: package.xml  setup.cfg  setup.py
terraflight_control/config/: tags.yaml  tello_camera_config.yaml  tello_drone.rviz
terraflight_control/launch/: base_station.launch.xml  drone.launch.xml  robot.launch.xml  slam_robot.launch.xml
terraflight_control/terraflight_control/: base_station.py  drone.py  drone_camera.py  drone_control.py  fetch_camera.py  odom.py  odom_node.py  odometry.py  robot_camera.py  robot_control.py
terraflight_description/: README.md  package.xml  setup.cfg  setup.py
terraflight_description/config/: view_terraflight.rviz
terraflight_description/launch/: show_terraflight.launch.py
terraflight_description/meshes/: back_left_wheel.stl
terraflight_description/urdf/: terraflight.urdf.xacro
