<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>terraflight_control</name>
  <version>0.0.0</version>
  <description>Control terraflight robot</description>
  <maintainer email="henryburon2024@u.northwestern.edu">Henry Buron</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>sensor_msgs</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>djitellopy</exec_depend>
  <exec_depend>opencv-python</exec_depend>
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
